--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,83 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri App</title>
-    <script type="module" src="/main.js" defer></script>
-  </head>
+<!DOCTYPE html>
+<html lang="es">
 
-  <body>
-    <main class="container">
-      <h1>Welcome to Tauri</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Image Compressor</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
 
-      <div class="row">
-        <a href="https://tauri.app" target="_blank">
-          <img src="/assets/tauri.svg" class="logo tauri" alt="Tauri logo" />
-        </a>
-        <a
-          href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
-          target="_blank"
-        >
-          <img
-            src="/assets/javascript.svg"
-            class="logo vanilla"
-            alt="JavaScript logo"
-          />
-        </a>
+<body>
+  <div class="container">
+    <h1>Image Compressor</h1>
+
+    <!-- Zona de drag & drop -->
+    <div id="dropZone" class="drop-zone">
+      <p>Arrastra imágenes aquí o haz click para seleccionar</p>
+      <input type="file" id="fileInput" multiple accept="image/*" hidden>
+      <p id="fileCount" class="file-count"></p>
+    </div>
+
+    <!-- Configuración -->
+    <div class="settings">
+      <!-- Calidad -->
+      <div class="setting-group">
+        <label>Calidad:</label>
+        <div class="radio-group">
+          <label>
+            <input type="radio" name="quality" value="high" checked>
+            Alta (90%)
+          </label>
+          <label>
+            <input type="radio" name="quality" value="medium">
+            Media (75%)
+          </label>
+          <label>
+            <input type="radio" name="quality" value="low">
+            Baja (60%)
+          </label>
+        </div>
       </div>
-      <p>Click on the Tauri logo to learn more about the framework</p>
 
-      <form class="row" id="greet-form">
-        <input id="greet-input" placeholder="Enter a name..." />
-        <button type="submit">Greet</button>
-      </form>
-      <p id="greet-msg"></p>
-    </main>
-  </body>
+      <!-- Formato -->
+      <div class="setting-group">
+        <label for="format">Formato de salida:</label>
+        <select id="format">
+          <option value="jpeg">JPEG</option>
+          <option value="png">PNG</option>
+          <option value="webp">WebP (no implementado)</option>
+        </select>
+      </div>
+
+      <!-- Width opcional -->
+      <div class="setting-group">
+        <label for="width">Ancho máximo (opcional):</label>
+        <input type="number" id="width" placeholder="Ej: 1920">
+        <small>Deja vacío para no redimensionar</small>
+      </div>
+
+      <!-- Carpeta de salida -->
+      <div class="setting-group">
+        <label for="outputDir">Carpeta de salida:</label>
+        <input type="text" id="outputDir" placeholder="Selecciona carpeta..." readonly>
+        <button id="selectDirBtn">Elegir carpeta</button>
+      </div>
+    </div>
+
+    <!-- Botón procesar -->
+    <button id="processBtn" class="process-btn" disabled>Procesar imágenes</button>
+
+    <!-- Resultados -->
+    <div id="results" class="results" hidden>
+      <h3>Resultados:</h3>
+      <p>Total: <span id="totalCount">0</span></p>
+      <p>Exitosas: <span id="successCount">0</span></p>
+      <p>Fallidas: <span id="failedCount">0</span></p>
+    </div>
+  </div>
+
+  <script type="module" src="main.js"></script>
+</body>
+
 </html>
