--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -13,22 +13,22 @@
     <h1>Image Compressor</h1>
 
     <div id="dropZone" class="drop-zone">
-      <p>Haz click para seleccionar imágenes</p>
+      <p>Click to select images</p>
       <p id="fileCount" class="file-count"></p>
     </div>
 
     <div class="settings">
       <div class="setting-group">
-        <label>Calidad:</label>
+        <label>Quality:</label>
         <div class="radio-group">
-          <label><input type="radio" name="quality" value="high" checked> Alta (90%)</label>
-          <label><input type="radio" name="quality" value="medium"> Media (75%)</label>
-          <label><input type="radio" name="quality" value="low"> Baja (60%)</label>
+          <label><input type="radio" name="quality" value="high" checked> High (90%)</label>
+          <label><input type="radio" name="quality" value="medium"> Medium (75%)</label>
+          <label><input type="radio" name="quality" value="low"> Low (60%)</label>
         </div>
       </div>
 
       <div class="setting-group">
-        <label for="format">Formato de salida:</label>
+        <label for="format">Output Format:</label>
         <select id="format">
           <option value="jpeg">JPEG</option>
           <option value="png">PNG</option>
@@ -36,26 +36,26 @@
       </div>
 
       <div class="setting-group">
-        <label for="width">Ancho máximo (opcional):</label>
-        <input type="number" id="width" placeholder="Ej: 1920">
-        <small>Deja vacío para no redimensionar</small>
+        <label for="width">Maximum Width (optional):</label>
+        <input type="number" id="width" placeholder="Ex: 1920">
+        <small>Leave empty to skip resizing</small>
       </div>
 
       <div class="setting-group">
-        <label for="outputDir">Carpeta de salida:</label>
-        <input type="text" id="outputDir" placeholder="Selecciona carpeta..." readonly>
-        <button id="selectDirBtn">Elegir carpeta</button>
+        <label for="outputDir">Output Folder:</label>
+        <input type="text" id="outputDir" placeholder="Select folder..." readonly>
+        <button id="selectDirBtn">Choose Folder</button>
       </div>
     </div>
 
-    <button id="processBtn" class="process-btn" disabled>Procesar imágenes</button>
+    <button id="processBtn" class="process-btn" disabled>Process Images</button>
 
     <div id="results" class="results" hidden>
-      <h3>Resultados:</h3>
+      <h3>Results:</h3>
       <p>Total: <span id="totalCount">0</span></p>
-      <p>Exitosas: <span id="successCount">0</span></p>
-      <p>Fallidas: <span id="failedCount">0</span></p>
-      <button id="clearBtn" class="clear-btn">Limpiar y procesar nuevas imágenes</button>
+      <p>Successful: <span id="successCount">0</span></p>
+      <p>Failed: <span id="failedCount">0</span></p>
+      <button id="clearBtn" class="clear-btn">Clear and process new images</button>
     </div>
   </div>
 
