Add EXIF metadata removal functionality

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,14 @@
       </div>
 
       <div class="setting-group">
+        <label>
+          <input type="checkbox" id="removeMetadata">
+          Remove all metadata (GPS, date, camera info)
+        </label>
+        <small>Removes EXIF data for privacy</small>
+      </div>
+
+      <div class="setting-group">
         <label for="width">Maximum Width (optional):</label>
         <input type="number" id="width" placeholder="Ex: 1920">
         <small>Leave empty to skip resizing</small>
