--- a/src/index.html
+++ b/src/index.html
@@ -35,12 +35,9 @@
         </select>
       </div>
 
-      <div class="setting-group">
-        <label>
-          <input type="checkbox" id="removeMetadata">
-          Remove all metadata (GPS, date, camera info)
-        </label>
-        <small>Removes EXIF data for privacy</small>
+      <div class="setting-group info-box">
+        <strong>🔒 Privacy Protection:</strong>
+        <p>All metadata is automatically removed for your privacy.</p>
       </div>
 
       <div class="setting-group">
